--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'keralalite';
-    src: url('keralalite-webfont.woff2') format('woff2'),
+    src: url('https://github.com/Excurl/mal-webfo-mbed/blob/main/keralalite-webfont.woff2?raw=true') format('woff2'),
          url('https://github.com/Excurl/mal-webfo-mbed/blob/main/keralalite-webfont.woff?raw=true') format('woff');
     font-weight: normal;
     font-style: normal;
